--- a/ascenda-app/package.json
+++ b/ascenda-app/package.json
@@ -14,9 +14,11 @@
     "date-fns": "^2.30.0",
     "dexie": "^4.0.4",
     "framer-motion": "^11.0.0",
+    "lucide-react": "^0.378.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
