Install shared libs and expose sibling sources

--- a/ascenda-app/tsconfig.json
+++ b/ascenda-app/tsconfig.json
@@ -4,8 +4,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@padrinho/*": ["../Ascenda Padrinho att/src/*"],
-      "@estagiario/*": ["../Ascenda Estagiario/*"],
-      "@hello-pangea/dnd": ["src/shims/helloPangeaDnd.jsx"]
+      "@estagiario/*": ["../Ascenda Estagiario/src/*"]
     }
   }
 }
