--- a/ascenda-app/package.json
+++ b/ascenda-app/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.3.0",
     "classnames": "^2.5.1",
     "date-fns": "^2.30.0",
     "dexie": "^4.0.4",
     "framer-motion": "^11.0.0",
+    "lucide-react": "^0.378.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
