--- a/ascenda-app/package.json
+++ b/ascenda-app/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.3.0",
     "classnames": "^2.5.1",
     "date-fns": "^2.30.0",
     "dexie": "^4.0.4",
     "framer-motion": "^11.0.0",
+    "lucide-react": "^0.378.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "@types/node": "^20.12.7"
   }
 }
